      window close control (thanks to Matthew Paul Thomas)
  * DistUpgrade/DistUpgradeViewGtk.py:
    - show update details in smaller font instead of italic
  * more UI improvements as suggested by Matthew Paul Thomas
  * DistUpgrade/DistUpgradeControler.py:
    - enforce KeepInstalledSection rule only when running on
      a network, otherwise we run into CD upgrade issues
  * DistUpgrade/DistUpgrade.cfg:
    - add slocate to the force obsoletes, mlocate replaces it
  
  [ Brian Murray ]
  * Dialog enhancements and typo fixes (LP: 182055)

 --

update-manager (1:0.87.6) hardy; urgency=low

  * DistUpgrade/DistUpgradeCache.py:
    - fix removal of obsolete packages (regression from 0.87.5)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 08 Feb 2008 15:57:13 +0100

update-manager (1:0.87.5) hardy; urgency=low

  * UpdateManager/UpdateManager.py:
    - use /var/lib/apt/periodic/update-success-stamp for the
      calculation when the last update was performed (LP: #185894)
  * DistUpgrade/DistUpgradeController.py:
    - if the upgrade can not be calculated in partial upgrade mode,
      do not recommend reporting a bug (most likely transient anyway)
  * DistUpgradeView/DistUpgradeViewText.py:
    - make the restart required question more clear (LP: #155554)
  * UpdateManager/Core/DistUpgradeFetcherCore.py:
    - tidy up output when show authentication message
  * data/update-manager.8:
    - man page fixes (LP: #185615)
  * update-manager:
    - run gtk.init_check() to catch errors when DISPLAY is not
      set (pygtk does not do that automatically)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 06 Feb 2008 18:11:45 +0100

update-manager (1:0.87.4) hardy; urgency=low

  * UpdateManager/UpdateManager.py:
    - run the partial upgrader with error correction
      if the dependencies on the system are not ok
      (it will fix most problems)
  * DistUpgrade/DistUpgradeController.py, DistUpgradeCache.py:
    - if dpkg was interrupted, run "dpkg --configure -a" 