@@ -1,3 +1,4 @@
-# sources.list fragment for pre-requists (one with countrymirror, one fallback)
-deb http://${countrymirror}archive.ubuntu.com/ubuntu dapper-backports main/debian-installer
+# sources.list fragment for pre-requists (mirror from sources.list + fallback)
+# this is safe to remove after the upgrade
+${mirror}
 deb http://archive.ubuntu.com/ubuntu dapper-backports main/debian-installer
