@@ -21,3 +21,5 @@ To=gutsy
 ValidOrigin=Ubuntu
 ValidMirrors = mirrors.cfg
 
+[Network]
+MaxRetries=3
