@@ -4,7 +4,10 @@ http://security.ubuntu.com/ubuntu/
 ftp://archive.ubuntu.com/ubuntu/
 ftp://security.ubuntu.com/ubuntu/
 
-#commercial (both urls are valid
+#commercial (both urls are valid)
 http://archive.canonical.com
 http://archive.canonical.com/ubuntu/
+
+# random german mirror
+http://ftp.inf.tu-dresden.de/os/linux/dists/ubuntu/
 
