@@ -13,6 +13,8 @@ update-manager (1:0.87.7) hardy; urgency=low
   * DistUpgrade/DistUpgradeControler.py:
     - enforce KeepInstalledSection rule only when running on
       a network, otherwise we run into CD upgrade issues
+    - when fetching the prerequists, be more robust in the 
+      mirror selection (and add tests for this)
   * DistUpgrade/DistUpgrade.cfg:
     - add slocate to the force obsoletes, mlocate replaces it
   
